--- a/Areas/Readme
+++ b/Areas/Readme
@@ -1,1 +1,167 @@
+AREA00 : Village of All Beginnings
+section 00 : Village of All Beginnings
+section 01 : Forest of All Beginnings
+section 02 : Forest of All Beginnings (hut entrance)
+section 03 : 100 Year Old Man's Hut
+section 04 : Behind the Hut
+section 05 : Ol' Pond
 
+AREA01 : Dwarf Forest
+section 00 : Forest of 100 Flowers
+section 01 : Forest of 100 Flowers (right entrance)
+section 02 : Wobbly Wharf
+section 03 : Watch Tower
+section 04 : Charity Square
+
+AREA02 : Dwarf village
+section 00 : Dwarf village
+section 01 : Dwarf Elder's Hut
+section 02 : Underground Prison
+section 03 : Underground Maze
+section 04 : Million Year Old Man's Room
+section 05 : The Strange Small Room
+
+AREA03 : Phoenix mountain
+section 00 : Stormy Mountain
+section 01 : Stormy Mountain (second part)
+section 02 : Lava Caves
+section 03 : Phoenix's nest
+section 04 : Stormy Mountain (purified)
+section 05 : Stormy Mountain (purified, second part)
+AREA04 : Haunted Mansion
+section 00 : North Side of Mansion
+section 01 : West Side of Mansion
+section 02 : South Side of Mansion
+section 03 : East Side of Mansion
+section 04 : Sunny Room
+section 05 : Thief's Room One
+section 06 : Swimming Room
+section 07 : Keyhole Room
+section 08 : Hiding Room
+section 09 : Room of Tribulation
+section 10 : Laughing Room
+section 11 : Civilization Room
+section 12 : Trap Room
+section 13 : Trick Room
+section 14 : Sun Torch Stand
+section 15 : 1,000 Year Old Man's Room
+section 16 : Shadow Room
+section 17 : Thief's Room Two
+section 18 : Thief's Room Three
+section 19 : Crying Room
+
+AREA05 : Baccus Village
+section 00 : Baccus Village
+section 01 : Central Park
+section 02 : Baccus Village
+section 03 : Central Park
+
+AREA06 : Motocross segment
+section 00 : Dirt Motocross
+section 01 : The Mermaid's Singing Rock (beach)
+section 02 : The Mermaid's Singing Rock (mermaid)
+
+AREA07 : Dwarf Forest (purified)
+section 00 : Forest of 100 Flowers
+section 01 : Forest of 100 Flowers (right entrance)
+section 02 : Wobbly Wharf
+section 03 : Watch Tower
+section 04 : Charity Square
+
+AREA08 : Baccus Lake
+section 00 : Baccus Pier
+section 01 : Baccus Lake
+section 02 : Baccus Pier
+section 03 : Baccus Lake
+
+AREA09 : Mushroom village
+section 00 : Mushroom Forest
+section 01 : Lake
+section 02 : Mansion (Grandfather clock room)
+section 03 : Mansion (Chandelier room)
+section 04 : Mansion (descending stairs)
+section 05 : Mansion (ascending stairs)
+section 06 : Leaf Slider
+AREA10 : Deep Jungle
+section 00 : Masakari Jungle
+section 01 : Masakari River
+section 02 : Old Tree Hill
+section 03 : Trick Village
+section 04 : Masakari Jungle (purified)
+section 05 : Masakari River (purified)
+section 06 : Old Tree Hill (purified)
+section 07 : Trick Village (purified)
+section 08 : 10,000 Year Old Man's Room
+
+AREA11 : Village of Civilization
+section 00 : Lumberjack Town (crashes/soft locks the game)
+section 01 : Lumberjack Factory
+section 02 : Dried Wishing Well
+
+AREA12 : Haunted Mansion (purified)
+section 00 : North Side of Mansion
+section 01 : West Side of Mansion
+section 02 : South Side of Mansion
+section 03 : East Side of Mansion
+section 04 : Sunny Room
+section 05 : Thief's Room One
+section 06 : Swimming Room
+section 07 : Keyhole Room
+section 08 : Hiding Room
+section 09 : Room of Tribulation
+section 10 : Laughing Room
+section 11 : Civilization Room
+section 12 : Trap Room
+section 13 : Trick Room
+section 14 : Sun Torch Stand
+section 15 : 1,000 Year Old Man's Room
+section 16 : Shadow Room
+section 17 : Thief's Room Two
+section 18 : Thief's Room Three
+section 19 : Crying Room
+
+AREA13 : Pig Island
+section 00 : Outer Walls of Pig Island (Flower Tower)
+section 01 : x Year Old Men Ending
+
+AREA14 : Evil Pigs
+section 00 : Evil Pig area One
+section 01 : Evil Pig area Two
+section 02 : Evil Pig area Three
+section 03 : Evil Pig area Four
+section 04 : Evil Pig area Five
+section 05 : Evil Pig area Six
+section 06 : Evil Pig area Seven
+section 07 : Evil Pig area Eight
+AREA16 : Village of Civilization (Clock Tower)
+section 00 : Stonestown (soft locks the game)
+section 01 : Clock Tower (soft locks the game)
+section 02 : Clock Tower (crash)
+section 03 : Clock Tower (Engine room)
+section 04 : Clock Tower (Entrance)
+section 05 : Clock Tower (Halfway up)
+section 06 : Clock Tower (Engine room, no exit)
+
+AREA17 : Village of Civilization (Iron Tower)
+section 00 : Iron Town (crashes the game)
+section 01 : Iron Castle (entrance)
+section 02 : Iron Castle (main room)
+section 03 : Iron Castle (left room)
+section 04 : Iron Castle (right room)
+section 05 : Iron Castle (engine room)
+section 06 : Iron Castle (soft lock)
+section 06 : Iron Castle (soft lock)
+section 07 : Iron Castle (soft lock)
+section 08 : Iron Castle (crashes the game)
+section 09 : Iron Castle (soft lock, "Y Crossing" music plays)
+section 10 : Iron Castle (soft lock, "Witch's Hut" music plays)
+
+AREA18 : Village of Civilization (Y Crossing)
+section 00 : Village of Civilization (crash/soft lock)
+section 01 : Y crossing
+section 02 : Witch's Hut
+
+AREA19 : Village of Civilization (Purified Dwarf village / Hidden Village)
+section 00 : Dwarf Elder's Hut
+section 01 : Dwarf Elder's Hut
+section 02 : Hidden Village
